--- a/source/posts/2012-05-23.md
+++ b/source/posts/2012-05-23.md
@@ -3,9 +3,9 @@
 
 >>![center](http://img.skitch.com/20120522-m5dhwi7uujy1f1t89s7ihqj9gw.png)<<
 
-Кто сейчас вспомнит, сколько длилось господство IE? У меня сейчас такое ощущение, что не меньше 10 лет. Я помню, как я страдал от IE6. Помню, как надеялся и выл от разочарования с IE7. Помню, как ни на что не надеялся и уже не разочаровывался от IE8. Анонсы IE9 конечно зародили во мне надежду, но нет, всё осталось как прежде. Теперь я осторожно рассматриваю картинки с выставки IE10, но, я думаю, боржоми пить уже поздно. Тем более что грузинские минводы теперь контрабандный товар.
+Кто сейчас вспомнит, сколько длилось господство IE? У меня сейчас такое ощущение, что не меньше 10 лет. Я помню, как я страдал от IE6. Помню, как надеялся и выл от разочарования с IE7. Помню, как ни на что не надеялся и уже не разочаровывался от IE8. Анонсы IE9, конечно, зародили во мне надежду, но нет, всё осталось как прежде. Теперь я осторожно рассматриваю картинки с выставки IE10, но, я думаю, боржоми пить уже поздно. Тем более, что грузинские минводы теперь контрабандный товар.
 
-И поздравляю ребят из команды Хрома. Сочетание неплохого продукта, массированной рекламной компании и упорной дистрибуции сделали своё дело. Хром это второй пользовательский продукт гугла, ставший самым массовым среди конкурентов. Нет, правда можно поздравить. Я так сухо про это пишу только потому, что болею за другую команду - за Firefox.
+И поздравляю ребят из команды Хрома. Сочетание неплохого продукта, массированной рекламной компании и упорной дистрибуции сделали своё дело. Хром это второй пользовательский продукт гугла, ставший самым массовым среди конкурентов. Нет, правда, можно поздравить. Я так сухо про это пишу только потому, что болею за другую команду - за Firefox.
 
 * [Гугл спустил IE с олимпа самого популярного браузера](http://www.businessinsider.com/google-overtakes-internet-explorer-as-most-popular-browser-2012-5).
 * [Мэшбл: Гуглхром теперь браузер номер один в мире](http://mashable.com/2012/05/21/chrome-is-tops/).
@@ -15,13 +15,13 @@
 * [Статистика по хрому может быть специально увеличена](http://www.pcmag.com/article2/0,2817,2404714,00.asp), но это фигня, в статкаунтере не дураки и фильтруют префетч.
 
 
-Мне кажется для веб-разработчиков самое важное - не забыть, что доля IE по-прежнему очень большая, доля Firefox тоже не особенно падает. И теперь нам всем придется делать сервисы с рассчетом на все три браузера сразу. А еще неплохо бы учитывать вебкит для мобильных, и оперу для русских сайтов. В общем, добро пожаловать в версточный ад :)
+Мне кажется, для веб-разработчиков самое важное - не забыть, что доля IE по-прежнему очень большая, доля Firefox тоже не особенно падает. И теперь нам всем придется делать сервисы с рассчетом на все три браузера сразу. А еще неплохо бы учитывать вебкит для мобильных, и оперу для русских сайтов. В общем, добро пожаловать в версточный ад :)
 
 -----
 
 ## Для всех
 * [Почему лучшие идеи приходят к нам когда мы о них не думаем](http://www.nature.com/news/why-great-ideas-come-when-you-aren-t-trying-1.10678). У меня тоже всегда так. Ну хоть в чем-то я как Архимед. {idea} {startup}
-* [VIA запускают в производство персоналки с себестоимостью в $49](http://www.geek.com/articles/chips/via-launch-a-49-android-pc-20120522/). На базе андроида, но со всем что надо: usb, звук, видео и прочее. {via} {android} {desktop}
+* [VIA запускают в производство персоналки с себестоимостью в $49](http://www.geek.com/articles/chips/via-launch-a-49-android-pc-20120522/). На базе андроида, но со всем, что надо: usb, звук, видео и прочее. {via} {android} {desktop}
 * [Со вчера Google официально хардверная компания](http://googleblog.blogspot.com/2012/05/weve-acquired-motorola-mobility.html). Ну, это я так намекаю что они официально подтвердили: Motorola Mobility теперь часть Google. {google} {motorola} {android}
 * [А вот опозитное мнение о фрагментации, или отсутствии таковой, андроида](http://nick.typepad.com/blog/2012/05/androids-overblown-fragmentation-problem.html). И тоже вроде бы стоит согласиться с автором. {android}
 * [Blekko наконец-то выпустили расширение для Firefox](http://blog.blekko.com/2012/05/22/mozilla-accelerates-search-navigation-with-blekko/). Даже не знаю, интересно, тысяча пользователей у плагина наберется? {blekko} {mozilla} {desktop}
@@ -29,7 +29,7 @@
 * [Создавать вещи для людей](http://www.standalone-sysadmin.com/blog/2012/05/engineeringinfrastructures/). Очень хочу придумать, как научить программистов (и себя!) основам человеческого дизайна. {design} {startup}
 * [GitHub получил немножко денег](http://pandodaily.com/2012/05/21/bootstrapped-github-now-raising-a-round-from-andreessen-horowitz/) по оценке где-то 500-800 миллионов долларов. Интересно, оказывается это их первые инвестиции. {github} {startup}
 * [Windows 8 создана чтобы грузиться быстро](http://blogs.msdn.com/b/b8/archive/2012/05/22/designing-for-pcs-that-boot-faster-than-ever-before.aspx?). Маленькая цитата: "У Windows 8 есть проблема - она может загружаться слишком быстро". {windows8} {fun} {microsoft}
-* [Крейг Волкер, создатель Google Voice, теперь переизобретает коллективные звонки](http://venturebeat.com/2012/05/21/inventor-of-google-voice-now-reinventing-conference-calls/). Я не знал что у Крейга новая компания. Ну и да, конфколы давно надо было исправить. {voice} {walker}
+* [Крейг Волкер, создатель Google Voice, теперь переизобретает коллективные звонки](http://venturebeat.com/2012/05/21/inventor-of-google-voice-now-reinventing-conference-calls/). Я не знал, что у Крейга новая компания. Ну и да, конфколы давно надо было исправить. {voice} {walker}
 * [Tray.io - интересная концепция "умных фильтров для почты"](http://tray.io/). Пока в стадии закрытой беты, но мне очень нравится идея. {startup} {mail}
 * [Саша Греф запустил интернет-проект за 10 часов](http://sachagreif.com/the-toolbox-from-idea-to-launch-in-10-hours/). Учитесь, блин. 10 часов на проект, который хорошо выглядит, худо-бедно работает и отлично демонстрирует концепцию "аппстор для одностраничных cайтов и мобильных веб-приложений". {startup} {html}
 * [Настоящая история того, что случилось во время IPO Фейсбука](http://www.businessinsider.com/exclusive-heres-the-inside-story-of-what-happened-on-the-facebook-ipo-2012-5). А мои инсайдеры принесли еще больше интересных слухов. И я их вам пока не расскажу :-P {facebook} {ipo} {hate}
@@ -38,7 +38,7 @@
 * [Члены основной команды JRuby перешли на работу в RedHat](http://www.rubyinside.com/jruby-redhat-5856.html). Мне даже интересно уже, зачем RH такое количество людей с эзотерическим знаниями вокруг jre. {jruby} {ruby} {redhat} {java}
 * [Гражданин MacCaw из твиттера выложил свой визивиг редактор интернет-страниц](http://blog.alexmaccaw.com/stylo). Опенсорс, между прочим. Похоже на наш нынешний конструктор Народ.ру :) {html} {code}
 * [Будущее определено! Light Table будет поддерживать и Python](http://www.chris-granger.com/2012/05/21/the-future-is-specific/). Как я рад, как я рад, у меня будет свой RAD :) Нет, серьезно, LightTable выглядит как первый IDE, которым я смогу пользоваться. {ide} {python}
-* [Я вчера просмотрел, оказывается Panic выпустили еще Coda под iPad!](http://panic.com/dietcoda/). Называется Diet Coda. Выглядит очень круто, правда нет поддержки git и вообще систем контроля версий. Но удаленное редактирование по ssh + встроенный терминал решают эту проблему на ура. {ipad} {coda} {dietcoda} {html}
+* [Я вчера просмотрел, оказывается Panic выпустили еще Coda под iPad!](http://panic.com/dietcoda/). Называется Diet Coda. Выглядит очень круто, правда, нет поддержки git и вообще систем контроля версий. Но удаленное редактирование по ssh + встроенный терминал решают эту проблему на ура. {ipad} {coda} {dietcoda} {html}
 * [В browserling появилась поддержка всех браузеров IE](http://www.catonmat.net/blog/announcing-real-internet-explorers-for-browserling/). Если вы еще не пробовали browserling - попробуйте, это средство для тестирования верстки вашего проекта во всех браузерах сразу, без установки на ваш десктоп. {browser} {testing} {html}.
 * [Хвалебная ода в двух частях, о том как ломали хромиум на соревнованиях Pwnium](http://blog.chromium.org/2012/05/tale-of-two-pwnies-part-1.html). Это действительно уму не растяжимо, как круто сейчас работают хакеры. {security} {chrome}
 
@@ -49,11 +49,11 @@
 * [Кевин Бурк: virtualenv это анти-паттерн для новичков](http://kev.inburke.com/kevin/virtualenv-is-an-anti-pattern-for-beginners/). Подписываюсь, новичкам невероятно сложно привыкнуть к virtualenv, проверенно на многих молодых питонистах. {python} {virtualenv}
 * [На debu.gs очень много про шел, который мне тоже очень нравится - про RC из Inferno](http://debu.gs/entries/inferno-part-1-shell). Вообще чертовски жаль, что Inferno практически забыт и никому не нужен. Столько там было на порядок лучше, чем в юниксах :( {inferno} {rcshell}
 * [Как то я упустил SocialBootstrapApi](https://github.com/ServiceStack/SocialBootstrapApi) - скелет одностраничного приложения на бэкбоне и .net. {backbonejs} {dotnet}
-* [Говорят что какой-то червяк ползет через фейсбук, английские ученые в панике](http://www.infoworld.com/d/security/cross-browser-worm-spreads-facebook-security-experts-warn-193800). Я почему-то не верю, в фейсбуке тоже не дураки работают. {facebook} {security}
+* [Говорят что какой-то червяк ползет через фейсбук, британские ученые в панике](http://www.infoworld.com/d/security/cross-browser-worm-spreads-facebook-security-experts-warn-193800). Я почему-то не верю, в фейсбуке тоже не дураки работают. {facebook} {security}
 * [Неэффективный джаваскрипт](http://eamodeorubio.github.com/ineffectivejs/) - презентация на много слайдов, отложил посмотреть. {javascript} {html}
 
 
 ## Разное
 * [Все гики любят "Назад в будущее"! Фотки со сьемок фильма](http://designtaxi.com/news/352586/Behind-The-Scenes-Photos-Of-Back-To-The-Future/). {fun}
 
-*Как то опять суетно получилось. Буду исправляться и спать. А вам доброе утро и не забывайте гладить кота на сайте!*
+*Как-то опять суетно получилось. Буду исправляться и спать. А вам доброе утро и не забывайте гладить кота на сайте!*
