--- a/source/posts/2012-05-24.md
+++ b/source/posts/2012-05-24.md
@@ -5,16 +5,16 @@
 
 Продукт представляет из себя расширения ко всем настольным браузерам и отдельные приложения для айфона и айпада, и позволяет искать в интернете... Где же новизна, спросите вы? Новизна в отображении результатов. Но давайте по порядку:
 
-* у поля для ввода запроса показываются Trending Searches, т.е. стимулируют поискать то же, что и другие
-* вместо обычного серпа показывается список превьюшек сайтов с однострочным описанием
-* результаты выдаются сразу по ходу набора, в стиле google instant
-* колдунщики показываются тут же, вместо результатов поиска
-* при просмотре сайтов-результатов всегда доступны (жестами и кнопочками) следующий и предыдущий результат поиска
-* любой сайт можно отложить в закладки
-* а еще история поисков и даже текущий поиск можно использовать на всех девайсах одновременно - синхронизация мгновенная
+* у поля для ввода запроса показываются Trending Searches, т.е. стимулируют поискать то же, что и другие;
+* вместо обычного серпа показывается список превьюшек сайтов с однострочным описанием;
+* результаты выдаются сразу по ходу набора, в стиле google instant;
+* колдунщики показываются тут же, вместо результатов поиска;
+* при просмотре сайтов-результатов всегда доступны (жестами и кнопочками) следующий и предыдущий результат поиска;
+* любой сайт можно отложить в закладки;
+* а еще история поисков и даже текущий поиск можно использовать на всех девайсах одновременно - синхронизация мгновенная.
 
-В общем в Yahoo Axis правда очень много нового и очень жаль что гики не следят за такими продуктами.
-Нет, вру, они следят. Большая их часть узнала о Yahoo Axis только потому, что [разработчики axis-плагина для Хрома  лоханулись и положили *приватный* сертификат внутрь пакета с плагином](http://nikcub.appspot.com/posts/yahoo-axis-chrome-extension-leaks-private-certificate-file). Безусловно это жесточайший фейл, но он не умаляет качества продукта.
+В общем,в Yahoo Axis правда очень много нового и очень жаль, что гики не следят за такими продуктами.
+Нет, вру, они следят. Большая их часть узнала о Yahoo Axis только потому, что [разработчики axis-плагина для Хрома  лоханулись и положили *приватный* сертификат внутрь пакета с плагином](http://nikcub.appspot.com/posts/yahoo-axis-chrome-extension-leaks-private-certificate-file). Безусловно, это жесточайший фейл, но он не умаляет качества продукта.
 
 
 * [10 голубых ссылочек ушли: новый браузер и визуальный поиск](http://searchengineland.com/ten-blue-links-be-gone-yahoo-introduces-browser-and-visual-search-experience-axis-122282)
@@ -32,7 +32,7 @@
 * [У Стивена Вольфрама новый продукт: System Modeler](http://blog.wolfram.com/2012/05/23/announcing-wolfram-systemmodeler/) - любопытная система моделирования процессов. Доступна для Windows и Mac, интерфейс очень "секси". {wolfram} {modeling}
 * [IBM запретила своим работникам пользоваться Siri](http://www.wired.com/wiredenterprise/2012/05/ibm-bans-siri/). А в следующий раз еще и компьютерами пользоваться запретит! {ibm} {siri} {iphone}
 * [Гугл старается сделать из G+ новый Flickr](http://venturebeat.com/2012/05/22/google-wants-to-be-your-new-flickr/). Ладно, на эту нишу я согласен, я и на Flickr-то не хожу. {gplus} {google}
-* [В Windows8 будет встроенный Flash](http://arstechnica.com/information-technology/2012/05/windows-8-will-integrate-include-adobe-flash/). И мне кажется это хорошо, не качать же его отдельно. {flash} {adobe} {microsoft}
+* [В Windows8 будет встроенный Flash](http://arstechnica.com/information-technology/2012/05/windows-8-will-integrate-include-adobe-flash/). И мне кажется, это хорошо, не качать же его отдельно. {flash} {adobe} {microsoft}
 
 ## На грани
 * [Просто офигенный анализ Eurovision с точки зрения математики и статистики, читать всем!](http://mewo2.github.com/nerdery/2012/05/20/ive-got-eurosong-fever-ted/). Я прямо оторваться не мог :) {eurovision} {fun} 
