--- a/source/posts/2012-05-23.md
+++ b/source/posts/2012-05-23.md
@@ -15,7 +15,7 @@
 * [Статистика по хрому может быть специально увеличена](http://www.pcmag.com/article2/0,2817,2404714,00.asp), но это фигня, в статкаунтере не дураки и фильтруют префетч.
 
 
-Мне кажется, для веб-разработчиков самое важное - не забыть, что доля IE по-прежнему очень большая, доля Firefox тоже не особенно падает. И теперь нам всем придется делать сервисы с рассчетом на все три браузера сразу. А еще неплохо бы учитывать вебкит для мобильных, и оперу для русских сайтов. В общем, добро пожаловать в версточный ад :)
+Мне кажется, для веб-разработчиков самое важное - не забыть, что доля IE по-прежнему очень большая, доля Firefox тоже не особенно падает. И теперь нам всем придется делать сервисы с расчетом на все три браузера сразу. А еще неплохо бы учитывать вебкит для мобильных, и оперу для русских сайтов. В общем, добро пожаловать в версточный ад :)
 
 -----
 
