--- a/source/posts/2012-05-24.md
+++ b/source/posts/2012-05-24.md
@@ -49,4 +49,4 @@
 * [PageGuide.js - удобный интерфейс для организации интерактивного хелпа по странице](http://tracelytics.github.com/pageguide/). Посмотрите налево - это тулбар, посмотрите направо - это скроллбар! {javascript} {html}
 * [Я уже про это писал, но тут с графиками: Гудбай, глобальный лок - сравнение MongoDB 2.0 и 2.2](http://blog.serverdensity.com/2012/05/23/goodbye-global-lock-mongodb-2-0-vs-2-2/). {mongodb} {lock}
 
-*Укороченный выпуск, поэтому добавляйте ссылки на интересное в коментарии, или лучше даже сразу на гитхаб. Спасибо вам!*
+*Укороченный выпуск, поэтому добавляйте ссылки на интересное в комментарии, или лучше даже сразу на гитхаб. Спасибо вам!*
