Добавил ссылку на статью "The MySQL “swap insanity” problem and the effects of the NUMA architecture"

--- a/source/posts/2012-05-25.md
+++ b/source/posts/2012-05-25.md
@@ -22,3 +22,4 @@
 * [Сравнение Twitter Bootstrap и Zurb Foundation](http://designshack.net/articles/css/framework-fight-zurb-foundation-vs-twitter-bootstrap/). Ну, я выбираю Bootstrap в 100% случаев. А вы? {bootstrap} {zurb} {html}
 * [Как Тим Кук изменяет Apple](http://tech.fortune.cnn.com/2012/05/24/apple-tim-cook-ceo/). В смысле "меняет", а не то, о чем вы все подумали! {cook} {apple} {money}
 * [Python PEP 420 принят](http://www.python.org/dev/peps/pep-0420/). Неявные пространства имен пакетов. Теперь немножко убавится непонятностей в именовании вызовов внутри пакетов. {python} {pep} {code}
+* [Про "безумный swap" MySQL и особенности NUMA-архитектуры] (http://blog.jcole.us/2010/09/28/mysql-swap-insanity-and-the-numa-architecture). Статья про эффект "безумного swap'а" в MySQL на системах с большим количеством памяти и большими базами и возможные пути решения. {linux} {mysql}
