Ссылка на http://www.lsd.ic.unicamp.br/~oliva/fun/prog/resign-patterns

--- a/source/posts/2012-05-25.md
+++ b/source/posts/2012-05-25.md
@@ -23,3 +23,4 @@
 * [Как Тим Кук изменяет Apple](http://tech.fortune.cnn.com/2012/05/24/apple-tim-cook-ceo/). В смысле "меняет", а не то, о чем вы все подумали! {cook} {apple} {money}
 * [Python PEP 420 принят](http://www.python.org/dev/peps/pep-0420/). Неявные пространства имен пакетов. Теперь немножко убавится непонятностей в именовании вызовов внутри пакетов. {python} {pep} {code}
 * [Про "безумный swap" MySQL и особенности NUMA-архитектуры](http://blog.jcole.us/2010/09/28/mysql-swap-insanity-and-the-numa-architecture). Статья про эффект "безумного swap'а" в MySQL на системах с большим количеством памяти и большими базами и возможные пути решения. {linux} {mysql}
+* ["Нездоровые" паттерны](http://www.lsd.ic.unicamp.br/~oliva/fun/prog/resign-patterns). Набор забавных анти-паттернов, с явным намеком на [грааль святая-всех-святых](http://en.wikipedia.org/wiki/Design_Patterns). {fun} {patterns}
