буквально пара правок

--- a/source/posts/2012-05-25.md
+++ b/source/posts/2012-05-25.md
@@ -5,13 +5,13 @@
 
 -----
 
-* [Гугл отчитался, что снимает 1 млн ссылок на нежелательный контент](http://www.wired.com/threatlevel/2012/05/google-infringing-link-removal/). Цензура!!!111 :) Вообще, правильно, что они всё это выкладывают публично, но лучше бы они не убирали ссылки по первому запросу. Даже я уже дважды попадал под ненастоящее "удаление", с разборками и доказательствами. Хотя... Ну, они же не могут - DMCA. {google} {dmca}
+* [Гугл отчитался, что снимает 1 млн ссылок в месяц на нежелательный контент](http://www.wired.com/threatlevel/2012/05/google-infringing-link-removal/). Цензура!!!111 :) Вообще, правильно, что они всё это выкладывают публично, но лучше бы они не убирали ссылки по первому запросу. Даже я уже дважды попадал под ненастоящее "удаление", с разборками и доказательствами. Хотя... Ну, они же не могут - DMCA. {google} {dmca}
 * [Европейским стартапам надо срочно получить образование в Долине](http://techcrunch.com/2012/05/24/european-startups-need-to-get-a-valley-education-and-fast/) - считает Теккранч, и я согласен с тремя из четырех их заявлений. Но с этими тремя согласен прямо *очень*. {startup} {money}
 * [Cronic - скрипт, который подавляет лишний аутпут в скриптах, вызываемых из crontab'а](http://habilis.net/cronic/). Ну, и почему я этого не видел раньше? {cron} {shellscript}
 * [Дизайн API от Мэта Геммеля](http://mattgemmell.com/2012/05/24/api-design/) - прямо набор хороших советов по реализации API (в его случае - SDK) на примере Objective C. {objc} {api} {sdk} {*}
 * [Энгаджет откопал подробности по Visual Studio и разработку под Windows 8](http://www.engadget.com/2012/05/24/microsoft-pulling-free-development-tools-for-windows-8-desktop-apps/). Кодеры под w8, из вас опять выжмут немного денег. {windows8} {visualstudio} {microsoft}
 * [Дастин Кёртис о том, как надувался прошлый пузырь доткомов, на примере портала "доктор Куп"](http://dcurt.is/the-bubble). Читая это, понимаешь, сейчас никакого пузыря еще даже рядом нет. {ipo} {money} {bubble}
-* [Отдельное приложение Facebook Camera](http://www.huffingtonpost.com/2012/05/24/facebook-launches-iphone-_0_n_1543188.html). Кажется, в фейсбуке решили клепать приложения под отдельные функции. Может это и логично. {facebook} {mobile}
+* [Отдельное приложение Facebook Camera](http://www.huffingtonpost.com/2012/05/24/facebook-launches-iphone-_0_n_1543188.html). Кажется, в фейсбуке решили клепать приложения под отдельные функции. Может, это и логично. {facebook} {mobile}
 * [Как делать REST API на Ruby](http://intridea.com/blog/2012/5/24/building-streaming-rest-apis-with-ruby), с коротким ответом - "как-как, на `Rack::Stream`". {ruby} {rack} {api}
 * [Джеф Крофт о том, как он реализует сайты, работающие на мобильном и десктопе одновременно](http://jeffcroft.com/blog/2012/mar/02/implementing-responsive-design/). Вообще этот тренд "responsive design" начинает изрядно раздражать. {html} {javascript} {design}
 * [Разработчики игр против давления на них с помощью всяких сторов :)](http://www.becausewemay.com/). Поэтому они с 24 мая по 1 июня резко снижают цены на свои продукты. Вот все бы так протестовали. Идите-смотрите, там много хороших игр, перед выходными. Diablo III, иди в Ад! {gamedev} {appstore} {*}
