давным навдо -> давным-давно

--- a/source/posts/2012-05-28.md
+++ b/source/posts/2012-05-28.md
@@ -40,7 +40,7 @@
 ## На грани
 * [Ух ты! Американцы нашли бэкдор в военном оборудовании, произведенном в Китае](http://www.cl.cam.ac.uk/~sps32/sec_news.html#Assurance). Я очень надеюсь, что мы такого оборудования не закупаем! {security}
 * [Интересное решение, в качестве водяных знаков показывать на картинке сокращенный урл, по которому можно увидеть оригинал картинки](http://www.gettyimages.com/Creative/Frontdoor/NewWatermark). Нужно в основном профессиональным фотографам, но все равно интересно. {photo} {watermark}
-* [Fedora 17 ушел в печать](http://lists.fedoraproject.org/pipermail/devel-announce/2012-May/000933.html). Смешно, конечно, никто уже давным навдо не печатает диски, но релиз всё еще называется "ушел в печать". {fedora} {linux}
+* [Fedora 17 ушел в печать](http://lists.fedoraproject.org/pipermail/devel-announce/2012-May/000933.html). Смешно, конечно, никто уже давным-давно  не печатает диски, но релиз всё еще называется "ушел в печать". {fedora} {linux}
 * [Неплохая презентация про API для доступа к функциям мобильных платформ, таким как вибрация или гироскоп](http://brian.io/slides/beyond-html5/). Кстати, обратите внимание на [инструмент, с помощью которого сделана пренезтация - reveal.js](https://github.com/hakimel/reveal.js). {slides} {html} {api} {mobile}
 * [Vert.x - довольно быстрый JDK-based http-сервер с богатым API и скриптованием приложений на js, java, jruby и groovy](http://vertx.io/). В первую очередь интересно своим API, похожим на... да нет, ни на что не похожим {web} {java} {javascript}
 * [Искал и нашел очень полезный тулл - средство для поиска неиспользуемых CSS элементов в файле](https://github.com/brianleroux/css-slap-chop). Сам еще не проверял, надеюсь выкроить время сегодня и проверить. {html} {javascript}
