--- a/source/posts/2012-05-28.md
+++ b/source/posts/2012-05-28.md
@@ -15,7 +15,7 @@
 Рассматривая всё это, я искренне полагаю, что Фейсбук вполне мог встать в очередь за дефицитным продуктом "браузер". И активное нежелание пресслужб Фейсбука и Оперы разговаривать сейчас с прессой кажется мне явным подтверждением этой теории. А вот что думает пресса:
 
 * [BI: Фейсбук готовится к следующему большому поглощению, может прикупить Оперу](http://www.businessinsider.com/facebook-is-looking-at-another-big-acquisition-it-might-buy-web-browser-opera-2012-5)
-* [TNW: Фейсбук купит Оперу? Может быть. Вот что мы слышали.](http://thenextweb.com/insider/2012/05/25/facebook-to-acquire-browser-maker-opera-maybe-heres-what-we-know/)
+* [TNW: Фейсбук купит Оперу? Может быть. Вот, что мы слышали.](http://thenextweb.com/insider/2012/05/25/facebook-to-acquire-browser-maker-opera-maybe-heres-what-we-know/)
 * [Mashable: Браузер от Фейсбука неизбежен](http://mashable.com/2012/05/25/facebook-browser/). Там даже видео есть
 * [techvibe: Фейсбук готовится запустить свой браузер?](http://www.techvibes.com/blog/is-facebook-going-to-launch-its-own-web-browser-2012-05-25)
 * и даже [компьютерворлд: Опера это лучший браузер для Фейсбука](http://www.computerworld.com/s/article/9227516/Opera_is_Facebook_s_best_browser_play)
