--- a/source/posts/2012-05-28.md
+++ b/source/posts/2012-05-28.md
@@ -18,7 +18,7 @@
 * [TNW: Фейсбук купит Оперу? Может быть. Вот что мы слышали.](http://thenextweb.com/insider/2012/05/25/facebook-to-acquire-browser-maker-opera-maybe-heres-what-we-know/)
 * [Mashable: Браузер от Фейсбука неизбежен](http://mashable.com/2012/05/25/facebook-browser/). Там даже видео есть
 * [techvibe: Фейсбук готовится запустить свой браузер?](http://www.techvibes.com/blog/is-facebook-going-to-launch-its-own-web-browser-2012-05-25)
-* и даже [компьютерворлд: Опера это лучший браузер для Фейсбука](http://www.computerworld.com/s/article/9227516/Opera_is_Facebook_s_best_browser_play)
+* и даже [компьютерворлд: Опера — это лучший браузер для Фейсбука](http://www.computerworld.com/s/article/9227516/Opera_is_Facebook_s_best_browser_play)
 
 Если всё сложится - для Оперы это будет действительно лучший выход. Майкрософт или Гугл просто убили бы продукт, с Фейсбуком у него есть шансы.
 
