Гугл с большой буквы и тире вместо дефиса

--- a/source/posts/2012-05-28.md
+++ b/source/posts/2012-05-28.md
@@ -7,9 +7,9 @@
 Собственно, что нам сейчас известно об Опере?
 
 * Опера сейчас действительно продается и много говорит с потенциальными покупателями. По крайней мере мои знакомые в Microsoft это подтверждают
-* При этом Опера сейчас это лакомый кусочек, интересный и Майкрософту, и гуглу, и, вполне вероятно, Фейсбуку
+* При этом Опера сейчас это лакомый кусочек, интересный и Майкрософту, и Гуглу, и, вполне вероятно, Фейсбуку
 * Опера состоит из двух важных кусков: маленький и малозаметный десктопный браузер и довольно большой мобильный
-* Не стоит так же забывать, что команда Оперы - чуть не главные двигатели прогресса в области браузеров и стандартов. Если доля пользователей Оперы не велика, то доля технологий, рожденных в Опере огромна
+* Не стоит так же забывать, что команда Оперы — чуть не главные двигатели прогресса в области браузеров и стандартов. Если доля пользователей Оперы не велика, то доля технологий, рожденных в Опере огромна
 * Судя по слухам, сейчас в Опере закрыт найм персонала, что обычно бывает перед продажей или закрытием предприятия
 
 Рассматривая всё это, я искренне полагаю, что Фейсбук вполне мог встать в очередь за дефицитным продуктом "браузер". И активное нежелание пресслужб Фейсбука и Оперы разговаривать сейчас с прессой кажется мне явным подтверждением этой теории. А вот что думает пресса:
