--- a/source/posts/2012-05-29.md
+++ b/source/posts/2012-05-29.md
@@ -45,4 +45,4 @@
 ## Разное
 * [Состояние теоремы P=NP](http://cacm.acm.org/magazines/2009/9/38904-the-status-of-the-p-versus-np-problem/fulltext), на сайте ACM, но в довольно популярном виде.
 
-*Расскажите мне, что вы думаете про новую кошечку? Симпатичная?*
+*P.S. На сайте, как вы видите, произошли некоторые перетасовки. Я не могу больше пользоваться хиперкоментами, поэтому перешел на любимый мной livefyre. И у нас теперь новая кошечка. Расскажите мне, что вы думаете про новую кошечку? Симпатичная?*
