Добавлена пропущенная запятая, удалена лишняя точка.

--- a/source/posts/2012-05-29.md
+++ b/source/posts/2012-05-29.md
@@ -17,10 +17,10 @@
 * [Возможно Фейсбук будет делать телефон вместе с INQ Mobile](http://techcrunch.com/2012/05/28/fast-track-to-a-facebook-phone-buy-inq-mobile/), а может быть и купит его. "Купите мне iNQ! Что значит какую модель?" {mobile} {facebook} {inq}
 * [Мало шансов, что телефон от фейсбука не будет отстоем](http://techcrunch.com/2012/05/27/facebook-phone-3/). Не знаю, по мне так Фейсбук очень похож на Apple, у него есть шансы сделать всё. {facebook} {mobile}
 * [Google Apps для Бизнесов получил сертификацию по ISO 27001](http://techcrunch.com/2012/05/28/google-apps-for-business-iso-27001-certification/). Не знаю, на что это повлияет. Думаю что ни на что. {google} {gapps} {iso}
-* [Образцы лучших дизайнерских идей для iPad](http://designmodo.com/iphone-ipad-app-design/). Большая часть, насколько я понял, чистый рендер а не скриншоты приложений. Но всё равно, красота. {ipad} {mobile} {design}
+* [Образцы лучших дизайнерских идей для iPad](http://designmodo.com/iphone-ipad-app-design/). Большая часть, насколько я понял, чистый рендер, а не скриншоты приложений. Но всё равно, красота. {ipad} {mobile} {design}
 * [25 вещей, которые говорят инвесторы, отвергая ваш проект](http://venturebeat.com/2012/05/28/25-things-investors-say-when-rejecting-your-startup/). Я применял 11 из 25, мне есть куда расти еще. {venture} {startup}
 * [6 самых крутых браузера для Android](http://socialbarrel.com/top-android-browsers-for-2012/37008/). Порядок я бы поставил другой, сначала Nightly Firefox Mobile, потом Chrome, а потом уже Dolphin. {android} {browser} {mobile}
-* [SocialMart запустился!](http://techcrunch.com/2012/05/28/yandex-factory-seed-funding-bears-fruit-socialmart-launches-social-shopping-with-yandex-market/). Это один из проектов, который когда-то был проинвестирован Яндекс.Фабрикой. {yandex} {socialmart} {startup}
+* [SocialMart запустился!](http://techcrunch.com/2012/05/28/yandex-factory-seed-funding-bears-fruit-socialmart-launches-social-shopping-with-yandex-market/) Это один из проектов, который когда-то был проинвестирован Яндекс.Фабрикой. {yandex} {socialmart} {startup}
 * [Прогноз, а точнее угадайка, что может сказать Тим Кук на конференции D10](http://mashable.com/2012/05/28/7-things-tim-cook-might-say-at-d10/). А я хочу новый макбук 15". Тонкий, но с максимальной мощностью и ретина экраном. Мечтааааа... {apple} {d10}
 * [История одного редизайна, как придумывали новую иконку отеля](http://blog.cleartrip.com/2012/02/09/design-nuances-redesigning-the-hotel-icon/). В такие моменты я думаю, хорошо, что я не дизайнер. {design} {icons}
 
