--- a/source/posts/2012-05-29.md
+++ b/source/posts/2012-05-29.md
@@ -26,7 +26,7 @@
 
 ## На грани
 * [Настольная карточная игра CPU Wars](http://gizmodo.com/5913732/the-geekiest-game-on-the-planet-is-cpu-top-trumps). Картинки крутые, а игра карточная, про процессоры :) {game} {card} {geek}
-* [Очередная десктоп-обертка, в этот раз для для Google Docs](http://www.cultofmac.com/169954/rocketdocs-makes-google-docs-editing-more-mac-like/). Действительно удобно, но платить 5 долларов за невнятные фичи вроде "загрузить файлы драг-н-дропом" -- по-моему перебор. {gdocs} {mac}
+* [Очередная десктоп-обертка, в этот раз для для Google Docs](http://www.cultofmac.com/169954/rocketdocs-makes-google-docs-editing-more-mac-like/). Действительно удобно, но платить 5 долларов за невнятные фичи вроде "загрузить файлы драг-н-дропом" -- по-моему, перебор. {gdocs} {mac}
 * [Гугл, Эппл, Майкрософт и Яху бьются за превосходство на мобильном пространстве](http://economictimes.indiatimes.com/tech/internet/browser-wars-google-apple-microsoft-yahoo-fight-for-dominance-in-mobile-space/articleshow/13606460.cms). Но игроков там, реально, значительно больше. {mobile} {apple} {google} {microsoft}
 * [APIфикация программных продуктов и как это похоже на LEGO](http://gigaom.com/2012/05/28/the-api-ificiation-of-software-and-legos/). Очень удобная аналогия, чтобы объяснять вашим менеджерам, зачем нужен API. {api} {lego}
 * [Проект JSON5, с расширением синтаксиса JSON](https://github.com/aseemk/json5). Главное - ну хоть кто-то со мной согласен, что в JSON не хватает комментариев. {json} {javascript}
