fixes in unicode for Google Chrome

--- a/source/posts/2012-05-29.md
+++ b/source/posts/2012-05-29.md
@@ -22,7 +22,7 @@
 * [6 самых крутых браузера для Android](http://socialbarrel.com/top-android-browsers-for-2012/37008/). Порядок я бы поставил другой, сначала Nightly Firefox Mobile, потом Chrome, а потом уже Dolphin. {android} {browser} {mobile}
 * [SocialMart запустился!](http://techcrunch.com/2012/05/28/yandex-factory-seed-funding-bears-fruit-socialmart-launches-social-shopping-with-yandex-market/). Это один из проектов, который когда-то был проинвестирован Яндекс.Фабрикой. {yandex} {socialmart} {startup}
 * [Прогноз, а точнее угадайка, что может сказать Тим Кук на конференции D10](http://mashable.com/2012/05/28/7-things-tim-cook-might-say-at-d10/). А я хочу новый макбук 15". Тонкий, но с максимальной мощностью и ретина экраном. Мечтааааа... {apple} {d10}
-* [История одного редизайна, как придумывали новую иконку отеля](http://blog.cleartrip.com/2012/02/09/design-nuances-redesigning-the-hotel-icon/). В такие моменты я думаю — хорошо, что я не дизайнер. {design} {icons}
+* [История одного редизайна, как придумывали новую иконку отеля](http://blog.cleartrip.com/2012/02/09/design-nuances-redesigning-the-hotel-icon/). В такие моменты я думаю - хорошо, что я не дизайнер. {design} {icons}
 
 ## На грани
 * [Настольная карточная игра CPU Wars](http://gizmodo.com/5913732/the-geekiest-game-on-the-planet-is-cpu-top-trumps). Картинки крутые, а игра карточная, про процессоры :) {game} {card} {geek}
@@ -30,12 +30,12 @@
 * [Гугл, Эппл, Майкрософт и Яху бьются за превосходство на мобильном пространстве](http://economictimes.indiatimes.com/tech/internet/browser-wars-google-apple-microsoft-yahoo-fight-for-dominance-in-mobile-space/articleshow/13606460.cms). Но игроков там, реально, значительно больше. {mobile} {apple} {google} {microsoft}
 * [APIфикация программных продуктов и как это похоже на LEGO](http://gigaom.com/2012/05/28/the-api-ificiation-of-software-and-legos/). Очень удобная аналогия, чтобы объяснять вашим менеджерам, зачем нужен API. {api} {lego}
 * [Проект JSON5, с расширением синтаксиса JSON](https://github.com/aseemk/json5). Главное - ну хоть кто-то со мной согласен, что в JSON не хватает комментариев. {json} {javascript}
-* [А рядом — JSONplus. Как обычный JSON, только в качестве значения можно использовать функции](http://jsonplus.com/). Даже не знаю, в чем особый смысл. {json} {javascript}
+* [А рядом - JSONplus. Как обычный JSON, только в качестве значения можно использовать функции](http://jsonplus.com/). Даже не знаю, в чем особый смысл. {json} {javascript}
 * [Выключите свет! Они на свет лезут! Еще один WYSIWYG редактор для HTML5 на jQuery](http://redactorjs.com/). {redactorjs} {html} {javascript} {wysiwyg}
 
 ## Для гиков
 * [Хм. Документация API всех проектов 37Signals переехала на GitHub](http://37signals.com/svn/posts/3181-our-api-docs-are-now-hosted-on-github). Идут стопами этого бложека ;) {API} {github} {37signals}
-* [Как работает рекурсия в Python](http://nedbatchelder.com/blog/201205/recursive_dogma.html). И вообще, там очень разумная фраза есть: "хорошая практика избегать — в питоне, если вы не понимаете, как оно работает." {python} {code} {recursion}
+* [Как работает рекурсия в Python](http://nedbatchelder.com/blog/201205/recursive_dogma.html). И вообще, там очень разумная фраза есть: "хорошая практика избегать - в питоне, если вы не понимаете, как оно работает." {python} {code} {recursion}
 * [Питон для Сисадминов](http://www.pythian.com/news/12241/liveblogging-senior-skills-python-for-sysadmins/) - статья уже старая, но всё ещё полезная. {python} {code}
 * [10 простых однострочников, которыми можно удивить друзей](http://codeblog.dhananjaynene.com/2011/06/10-python-one-liners-to-impress-your-friends/). Опять про python, у меня рецессия от употребления node.js. {python} {code}
 * [Баг, который я не хочу забыть](http://paulasmuth.com/blog/a_bug_i_wont_forget/). Первый раз вижу проблемы, которые начинаются после перехода с NIO на тредную модель. Обычно всё в обратную сторону. {NIO} {java} {scala}
