twitter.com perfomance

--- a/source/posts/2012-05-30.md
+++ b/source/posts/2012-05-30.md
@@ -55,3 +55,5 @@
 ## Разное
 * [Флипчарт, что произойдет, если в Греции объявят дефолт](http://www.marketplace.org/topics/world/easy-street/what-happens-if-greece-defaults-flow-chart). Неожиданно всё оказалось. Кто-нибудь возьмется перевести на русский? {chart} {greece} {default} {politics}
 
+## От пользователей
+* [Twitter.com отходит от полностью client-side архитектуры](http://engineering.twitter.com/2012/05/improving-performance-on-twittercom.html). Благодаря дереву зависимостей и отказу от хэш-бэнгов #! теперь не требуется загрузка и парсинг мегабайта javascript-кода, контент показывается значительно быстрее, особенно это заметно на [страницах твитов](https://twitter.com/cwninja/statuses/205341558285938688) {twitter}
