won't forget == will not forget переводится не забуду

--- a/source/posts/2012-05-29.md
+++ b/source/posts/2012-05-29.md
@@ -38,7 +38,7 @@
 * [Как работает рекурсия в Python](http://nedbatchelder.com/blog/201205/recursive_dogma.html). И вообще, там очень разумная фраза есть: "хорошая практика избегать - в питоне, если вы не понимаете, как оно работает." {python} {code} {recursion}
 * [Питон для Сисадминов](http://www.pythian.com/news/12241/liveblogging-senior-skills-python-for-sysadmins/) - статья уже старая, но всё ещё полезная. {python} {code}
 * [10 простых однострочников, которыми можно удивить друзей](http://codeblog.dhananjaynene.com/2011/06/10-python-one-liners-to-impress-your-friends/). Опять про python, у меня рецессия от употребления node.js. {python} {code}
-* [Баг, который я не хочу забыть](http://paulasmuth.com/blog/a_bug_i_wont_forget/). Первый раз вижу проблемы, которые начинаются после перехода с NIO на тредную модель. Обычно всё в обратную сторону. {NIO} {java} {scala}
+* [Баг, который я не забуду](http://paulasmuth.com/blog/a_bug_i_wont_forget/). Первый раз вижу проблемы, которые начинаются после перехода с NIO на тредную модель. Обычно всё в обратную сторону. {NIO} {java} {scala}
 * [Проект ccss - кофескриптоподобный синтаксис для написания CSS](https://github.com/aeosynth/ccss). Меня в этой штуке, как и в CoffeeKup, смущает **снижение** читаемости в моих глазах. {html} {coffee} {css}
 
 
