--- a/source/posts/2012-06-01.md
+++ b/source/posts/2012-06-01.md
@@ -1,21 +1,21 @@
 # Google. LOL.
 
-Сегодня пятница, поэтому новость дня скорее смешная чем важная.
-[Google торжественно отчитался в закупке пачки доменов верхнего уровня](http://googleblog.blogspot.com/2012/05/expanding-internet-domain-space.html). Но интересен, конечно же, не отчет, а список категорий в которых они закупали домены.
+Сегодня пятница, поэтому новость дня скорее смешная, чем важная.
+[Google торжественно отчитался в закупке пачки доменов верхнего уровня](http://googleblog.blogspot.com/2012/05/expanding-internet-domain-space.html). Но интересен, конечно же, не отчет, а список категорий, в которых они закупали домены.
 
-* TLD связанные с торговыми марками (.google)
-* Связанные с основным бизнесом компании (например .docs)
-* Домены, улучшающие удобство пользователя. Идея получить URL вида bobuk.youtube отличная.
-* А так же интересные домены, у которых интересный творческий потенциал. (например .lol)
+* TLD связанные с торговыми марками (.google);
+* Связанные с основным бизнесом компании (например, .docs);
+* Домены, улучшающие удобство пользователя. Идея получить URL вида bobuk.youtube отличная;
+* А так же интересные домены, у которых интересный творческий потенциал. (например .lol).
 
-Всего гугл подали более 50 заявок на TLD по цене $185000 за заявку, т.е. пошопились на 9-12 миллионов. Сейчас заявки на более TLD не принимаются, ICANN готовится к запуску и пережевывает те 350 миллионов, которые она получила.
+Всего гугл подали более 50 заявок на TLD по цене $185000 за заявку, т.е. пошопились на 9-12 миллионов. Сейчас заявки на TLD больше не принимаются, ICANN готовится к запуску и пережевывает те 350 миллионов, которые она получила.
 
 >>![center](http://hellogiggles.com/wp-content/uploads/2012/04/02/dontkillyourself-614x450.jpg)<<
 
 * [Гугл подписался на более чем 50 доменов](http://adage.com/article/digital/google-applies-50-domains-including-lol-youtube/235079/)
 * [Гугл подал заявки на .google, .docs, .youtube, .lol и другие TLD](http://techcrunch.com/2012/05/31/google-applies-for-google-youtube-and-lol-top-level-domains/)
 
-Но вы главное-то оценили? Как вам домен .lol принадлежащий гуглу? Я надеялся, что этот TLT выкупит какой-нибудь Comedy Central или, на худой конец, Фишки.нет.
+Но вы главное-то оценили? Как вам домен .lol, принадлежащий гуглу? Я надеялся, что этот TLD выкупит какой-нибудь Comedy Central или, на худой конец, Фишки.нет.
 
 -----
 
@@ -23,7 +23,7 @@
 * [Huble Indie Bundle 5, опять продают много-много игр "за любую цену"](http://www.humblebundle.com/?hib5). Включая мой любимый хит Superbrothers: Sword & Sworcery EP. {game} {sell}
 * [Гугл начал продавать не только "свои макбуки", но и "свой макмини"](https://www.google.com/intl/en/chrome/devices/chromebox.html). Называется Chromebox, и ему, конечно, никак не отмазаться от лейбла "попытка клонировать macmini". {google} {chromeos}
 * [Волшебный момент в твиттере. Малоизвестный реппер твитнул "Самое сложное - заработать первый миллион". И получил ответ от реального миллиардера Пикенса: "Первый миллиард заработать чертовски труднее"](http://gizmodo.com/5914534/the-most-magical-event-in-twitter-history-just-happened). Волшебное тут то, что тебя может фолловить реальный миллиардер, конечно. Теперь самое трудное не начать клянчить "дай миллион!" :) {twitter} {fun}
-* [Кошмар баннерных сетей, Майкрософт собирается сделать опцию Do Not Track включенной по умолчанию в IE10](http://www.wired.com/threatlevel/2012/05/ie10-do-not-track/). Имхо делать это по умолчанию - зло. Слежка мешает в первую очередь гикам, а нормальным людям это совсем не нужно. {ie10} {microsoft} {dnt} {browser}
+* [Кошмар баннерных сетей, Майкрософт собирается сделать опцию Do Not Track включенной по умолчанию в IE10](http://www.wired.com/threatlevel/2012/05/ie10-do-not-track/). Имхо, делать это по умолчанию - зло. Слежка мешает в первую очередь гикам, а нормальным людям это совсем не нужно. {ie10} {microsoft} {dnt} {browser}
 * [Кстати, Microsoft предлагает скачать релиз превью от Windows 8](http://windows.microsoft.com/en-us/windows-8/iso?ocid=W_OFF_W8P_TechCenter_ISO_en-us). Быра идем и качаем, там есть на что посмотреть. {windows8}
 * [Flipboard обещают версию для Android, даже проводят закрытый бетатест](http://techcrunch.com/2012/05/30/flipboard-officially-opens-up-their-android-beta-to-interested-testers/). Новая мода для приложений, которым уже тесно в рамках iOS. Делаем ставки, купит ли их фейсбук? {flipboard} {android} {beta}
 * [Как не облажаться во время презентации стартапа](http://www.readwriteweb.com/start/2012/05/how-not-to-screw-up-your-startup-presentation.php), впрочем, подходит и просто для презентации любого проекта. {startup} {presentation}
@@ -33,11 +33,11 @@
 ---
 
 * [Очередная коллекция "50 новых ресурсов и инструментов для веб-девелоперов"](http://speckyboy.com/2012/05/29/50-new-resources-and-tools-for-web-developers/). Очень устал от мема "Responsive" в этой области. Кстати, как бы перевести на русский этот responsive design? {html} {javascript}
-* [Parse запустили очень крутой API для парсинга сайтов](http://blog.parse.com/2012/05/30/parse-launches-javascript-sdk%3A-parse-for-websites/), конкурируя с YQL и прочими ребятами. Интересно, будет ли кто-то действительно покупать эту услугу. {parse} {api}
-* [Микрорасследование: что такое делала в консоли "девушка с татуировкой дракона"](http://oracle-wtf.blogspot.co.uk/2012/05/girl-with-ansi-tattoo.html). Оказалось она фигачила SQL запрос, похожий на настоящий, но очень уж не оптимизированный. {sql} {fun}
+* [Parse запустили очень крутой API для парсинга сайтов](http://blog.parse.com/2012/05/30/parse-launches-javascript-sdk%3A-parse-for-websites/), конкурируя с YQL и прочими ребятами. Интересно, будет ли кто-то действительно покупать эту услугу? {parse} {api}
+* [Микрорасследование: что такое делала в консоли "девушка с татуировкой дракона"](http://oracle-wtf.blogspot.co.uk/2012/05/girl-with-ansi-tattoo.html). Оказалось, она фигачила SQL запрос, похожий на настоящий, но очень уж не оптимизированный. {sql} {fun}
 * [Через пост в блоге Tarek Ziade вышел на описание работающей связки Circus + Mongrel2](http://blog.ziade.org/2012/05/31/mongrel2-amp-circus-full-control-of-your-web-stack/), оказалось фантастично удобно и для любого почти языка. Я использую для питона, и как раз вместо gunicorn, как у автора статьи. {python} {mongrel} {circus} {gunicorn}
-* [Оказывается в доках Heroku есть хорошая инструкция по старту django](https://devcenter.heroku.com/articles/django). Вообще для меня привлекательнее амазона сейчас только heroku, если бы не цены. {heroku} {django} {amazon}
-* [Хм. А вот это разве не дырка в безопасности браузера?](http://lcamtuf.blogspot.com/2012/05/yes-you-can-have-fun-with-downloads.html) Я в этом ничерта не понимаю, но для меня возможность вызвать скачивание файла без промежуточного диалога - это дыра. {security} {html} {browser}
-* [Cuisine, расширение для Fabric, позволяет удобно работать с файлами, пользователями, пакетами](https://github.com/sebastien/cuisine). Пишу потому, что как-то этот проект недооценивают. Попробуйте, особенно если вы пользуетесь Fabric. {python} {deploy} {code}
+* [Оказывается, в доках Heroku есть хорошая инструкция по старту django](https://devcenter.heroku.com/articles/django). Вообще для меня привлекательнее амазона сейчас только heroku, если бы не цены. {heroku} {django} {amazon}
+* [Хм. А вот это разве не дырка в безопасности браузера?](http://lcamtuf.blogspot.com/2012/05/yes-you-can-have-fun-with-downloads.html) Я в этом ни черта не понимаю, но для меня возможность вызвать скачивание файла без промежуточного диалога - это дыра. {security} {html} {browser}
+* [Cuisine, расширение для Fabric, позволяет удобно работать с файлами, пользователями, пакетами](https://github.com/sebastien/cuisine). Пишу потому, что как-то этот проект недооценивают. Попробуйте, особенно, если вы пользуетесь Fabric. {python} {deploy} {code}
 
-*P.S. очень напряженная неделя была, простите за вчерашний невыпуск. И присылайте на гитхаб ваши новости.*
+*P.S. Очень напряженная неделя была, простите за вчерашний невыпуск. И присылайте на гитхаб ваши новости.*
