--- a/source/posts/2012-06-04.md
+++ b/source/posts/2012-06-04.md
@@ -1,12 +1,12 @@
 # Особенности современных интерфейсов
 
-Мои "темы дня" не обязательно новости, если вы понимаете, о чем я. Вот и сегодня, извините за неровный почерк.
+Мои "темы дня" не обязательно новости, если вы понимаете, о чём я. Вот и сегодня, извините за неровный почерк.
 
 В конце прошлой недели ребята из [Mozilla UX выложили свой отчет по использованию разных элементов интерфейса их браузера](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/). Сегодня я вам расскажу, что там было самое интересное. А это примерно всё.
 
 >>![center](http://chyo.ru/testpilot.png)<<
 
-Как, собственно, всё это происходило: в течении одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с легким перекосом в сторону гиков. Ну, не то чтобы с легким, скорее с сильным, потому что тест пилот обычно включен у пользователей Mozilla Nightly, например у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
+Как, собственно, всё это происходило: в течении одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с легким перекосом в сторону гиков. Ну, не то чтобы с легким, скорее, с сильным, потому что тест пилот обычно включен у пользователей Mozilla Nightly, например, у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
 
 Вот интересные области, куда нажимают люди в порядке возрастания частоты.
 
@@ -32,29 +32,29 @@
 
 * Люди умеют пользоваться саджестами, не только в поиске, но и в строке ввода URL. Поздравляю, люди, вы только что выросли в моих глазах!
 * Люди используют разные поисковые системы. И всем браузерам предстоит с этим что-то решать, потому что сейчас все браузеры пытаются объединить опыт поисковой строки и строки ввода URL.
-* Люди *очень* интенсивно используют закладки. Куда интенсивнее, чем я думал, а значит и тут нужна революция, ведь сейчас интерфейс закладок юзабелен только в панели закладок. Это, кстати, косвенно подтверждается и популярностью фичи "визуальные закладки" в яндекс.баре для FireFox.
-* Всего 0.7% используют кнопку "показать все табы". Скорее всего ее надо убирать из интерфейса. К сожалению эта же кнопка позволяет группировать табы, а это фича ради которой я и пользуюсь мозиллой.
+* Люди *очень* интенсивно используют закладки. Куда интенсивнее, чем я думал, а, значит, и тут нужна революция, ведь сейчас интерфейс закладок юзабелен только в панели закладок. Это, кстати, косвенно подтверждается и популярностью фичи "визуальные закладки" в яндекс.баре для FireFox.
+* Всего 0.7% используют кнопку "показать все табы". Скорее всего, ее надо убирать из интерфейса. К сожалению, эта же кнопка позволяет группировать табы, а это фича ради которой я и пользуюсь мозиллой.
 
 В этом опросе [так же получены результаты по использованию меню](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/) и проч. Прочитайте, это очень познавательно и удивительно в некоторых аспектах. Открывает глаза на многие детали использования интернета в целом.
 
 -----
 
 ## Для всех
-* [Я недавно писал о новом запуске Bit.ly](http://addmeto.cc/post/2012-05-30/). [А вот реакция на запуск](http://thenextweb.com/apps/2012/06/02/not-a-fan-of-the-big-bitly-revamp-here-are-9-alternatives/) - хороший обзор 9 интересных альтернатив для bit.ly. На самом деле у меня есть база из примерно 5 сотен сокращалок. От себя добавлю, что если вам нужна просто сокращалка, а не набор свистелок - всегда есть [clck.ru](http://clck.ru/) {bitly} {shortener}
+* [Я недавно писал о новом запуске Bit.ly](http://addmeto.cc/post/2012-05-30/). [А вот реакция на запуск](http://thenextweb.com/apps/2012/06/02/not-a-fan-of-the-big-bitly-revamp-here-are-9-alternatives/) - хороший обзор 9 интересных альтернатив для bit.ly. На самом деле у меня есть база из примерно 5 сотен сокращалок. От себя добавлю, что, если вам нужна просто сокращалка, а не набор свистелок - всегда есть [clck.ru](http://clck.ru/) {bitly} {shortener}
 * [Эппловский телевизор, и почему стоит ждать от него революции](http://www.businessinsider.com/apple-television-what-to-expect-2012-6). Бизнесинсайдер всегда такой бизнесинсайдер. {apple} {tv} {fap} {fap} {fap}
-* [Фотохостинг PicPlz закрывается 3 июля. Совсем.](http://thenextweb.com/insider/2012/06/02/photo-sharing-service-picplz-to-shut-down-on-3-july/) Все думают что причина в инстаграме. {foto} {picplz} {instagram}
+* [Фотохостинг PicPlz закрывается 3 июля. Совсем.](http://thenextweb.com/insider/2012/06/02/photo-sharing-service-picplz-to-shut-down-on-3-july/) Все думают, что причина в инстаграме. {foto} {picplz} {instagram}
 * [10 инстаграммов, но для видео](http://thenextweb.com/apps/2012/06/03/10-instagram-for-video-apps-to-watch/). Я их все пробовал, нормальный только SocialCam. {video} {hipsters}
-* [Кошмар гугла: Apple-Фейсбук затусовались](http://news.cnet.com/8301-17852_3-57446229-71/googles-fear-an-apple-facebook-love-fest/). Действительно, Гугл ударяясь в свой Г+ вряд ли учел, что два таких огромных игрока могут запартнериться. {gplus} {google} {facebook} {apple}
+* [Кошмар гугла: Apple-Фейсбук затусовались](http://news.cnet.com/8301-17852_3-57446229-71/googles-fear-an-apple-facebook-love-fest/). Действительно, Гугл, ударяясь в свой Г+, вряд ли учел, что два таких огромных игрока могут запартнериться. {gplus} {google} {facebook} {apple}
 * [И еще немного на ту же тему: куски Facebook будут очень торчать в iOS6](http://techcrunch.com/2012/06/01/facebook-ios-6-integration/). Я рад, потому что лучше facebook, чем вк и гплас :) {facebook} {ios6} {apple}
-* [А вот и контрмеры: судя по всему Google запустит 3d-карты быстрее, чем Apple](http://www.forbes.com/sites/anthonykosner/2012/06/02/touche-google-plans-to-announce-its-own-3d-maps-before-apple/). Конечно, быстрее не значит лучше. Но поставить эпл в позицию догоняющих - приятно. [Еще один обзор этой темы от TNW](http://thenextweb.com/google/2012/06/01/google-to-head-apple-off-at-the-pass-by-holding-3d-maps-event-june-6th-just-before-wwdc/) {apple} {google} {maps}
-* [В Gmaps для андроида нашли неиспользованные иконки, видимо для следующих релизов](http://www.androidpolice.com/2012/06/01/mysterious-new-files-in-the-google-maps-6-8-apk-history-timeline-latitude-g-integration-and-more/). И по ним можно додумать будущий функционал. Круто же? {gmaps} {google}
+* [А вот и контрмеры: судя по всему, Google запустит 3d-карты быстрее, чем Apple](http://www.forbes.com/sites/anthonykosner/2012/06/02/touche-google-plans-to-announce-its-own-3d-maps-before-apple/). Конечно, быстрее не значит лучше. Но поставить эпл в позицию догоняющих - приятно. [Еще один обзор этой темы от TNW](http://thenextweb.com/google/2012/06/01/google-to-head-apple-off-at-the-pass-by-holding-3d-maps-event-june-6th-just-before-wwdc/) {apple} {google} {maps}
+* [В Gmaps для андроида нашли неиспользованные иконки, видимо, для следующих релизов](http://www.androidpolice.com/2012/06/01/mysterious-new-files-in-the-google-maps-6-8-apk-history-timeline-latitude-g-integration-and-more/). И по ним можно додумать будущий функционал. Круто же? {gmaps} {google}
 * [Когда фейсбук ложится, весь интернет моргает](http://gigaom.com/2012/06/01/when-facebook-goes-down-the-internet-barely-blinks/) и это очевидно. Хотя, я думаю, хуже всего интернету от морганий youTube. {facebook}
 * [Версия "Войны и Мира" для Nook <del>не влезла в память</del> заменяет слово Kindled на Nookd](http://arstechnica.com/information-technology/2012/06/nook-version-of-war-and-peace-turns-the-word-kindled-into-nookd/). Хорошо что Толстой умер уже. {nook} {bandn} {kindle}
-* [Яху и Facebook вероятно сумеют договориться по поводу патентов](http://allthingsd.com/20120603/patent-peace-yahoo-and-facebook-in-advanced-negotiations-to-settle-fractious-infringement-lawsuits/). Правда через суд :) {facebook} {yahoo} {lawyers}
+* [Яху и Facebook, вероятно, сумеют договориться по поводу патентов](http://allthingsd.com/20120603/patent-peace-yahoo-and-facebook-in-advanced-negotiations-to-settle-fractious-infringement-lawsuits/). Правда, через суд :) {facebook} {yahoo} {lawyers}
 
 ## На грани
-* [Еврокомиссия намекает что Google должен поменять поисковую выдачу или предстать перед Европейским судом](http://www.guardian.co.uk/technology/2012/jun/01/google-european-commission-search-results). Потому что нельзя быть на свете красивой такой и промотировать свои сервисы, незаслуженно ставя их выше чужих. Я, как не странно, на стороне гугла. Их сервис, их правила. {google} {antitrust}
-* [Пароли людей старше 55 вдвое круче, чем пароли подростков до 25](http://www.newscientist.com/article/dn21871-over55s-pick-passwords-twice-as-secure-as-teenagers.html). О чем это говорит? О том что у подростков нет представлений о безопасности? {security} {password}
+* [Еврокомиссия намекает, что Google должен поменять поисковую выдачу или предстать перед Европейским судом](http://www.guardian.co.uk/technology/2012/jun/01/google-european-commission-search-results). Потому что нельзя быть на свете красивой такой и промотировать свои сервисы, незаслуженно ставя их выше чужих. Я, как не странно, на стороне гугла. Их сервис, их правила. {google} {antitrust}
+* [Пароли людей старше 55 вдвое круче, чем пароли подростков до 25](http://www.newscientist.com/article/dn21871-over55s-pick-passwords-twice-as-secure-as-teenagers.html). О чем это говорит? О том, что у подростков нет представлений о безопасности? {security} {password}
 * [Статья-фантазия, что бы iOS6 могла утащить у других операционных систем](http://www.imore.com/2012/05/31/higher-hanging-fruit-ios-6/). Лично я никаких революций не жду, меня пока все устраивает. {ios} {apple}
 * [Android 4 уже на 7% совместимых устройств](http://www.theverge.com/2012/6/2/3058522/android-4-0-now-on-7-1-percent-of-devices-still-woefully-behind). Даже андроида 2.2 пока больше. {mobile} {android}
 * [5 лучших прошивок для андроида](http://lifehacker.com/5915093/five-best-android-roms). Мой выбор - cyanogen и miui. {andoird} {mobile} {miui}
@@ -62,10 +62,10 @@
 * [Книга "Taking your talent to the web" стала доступна онлайн](http://takingyourtalenttotheweb.com/). Это исторически ценная книга, вышедшая в 2001 году, одна из самых древних книг по *современному* вебдизайну. {html} {design}
 
 ## Для гиков
-* [Фейсбук зарелизил библиотеку Folly](https://www.facebook.com/notes/facebook-engineering/folly-the-facebook-open-source-library/10150864656793920). Поздравьте меня. Я раньше комплексовал, что у нас в поиске тоже куча своих собственных реализаций всего подряд, даже класс строки был. Теперь я не переживаю, это у всех так, даже у стомиллиардных компаний! [Вот еще которкое упоминание этой новости](http://www.phoronix.com/scan.php?page=news_item&px=MTExMjQ). {facebook} {bicycle} {folly} {cplusplus}
+* [Фейсбук зарелизил библиотеку Folly](https://www.facebook.com/notes/facebook-engineering/folly-the-facebook-open-source-library/10150864656793920). Поздравьте меня. Я раньше комплексовал, что у нас в поиске тоже куча своих собственных реализаций всего подряд, даже класс строки был. Теперь я не переживаю, это у всех так, даже у стомиллиардных компаний! [Вот еще краткое упоминание этой новости](http://www.phoronix.com/scan.php?page=news_item&px=MTExMjQ). {facebook} {bicycle} {folly} {cplusplus}
 * Многие очень рекомендуют использовать в качестве начального шаблона для сайта [HTML5 Boilerplate](http://html5boilerplate.com/). [Вот отличная подборка туториалов и шаблонов на основе HTML5 Boilerplate](http://designmodo.com/html5-boilerplate-templates-tutorials/). {html} {boilerplate}
 * [Как выглядит API к Siri](http://blog.teaapp.com/post/24212825807/tea-earl-grey-hot-what-would-a-siri-api-look-like). Интересно было почитать, хотя на 80% это домыслы, конечно. {siri} {api}
 * [jquery transit - библиотека для красивых визуальных преобразований](http://ricostacruz.com/jquery.transit/). Работает на CSS3, подходит только для современных браузеров. {html} {jquery} {css}
 * [Как-то я упустил, вышел NLTK2, мой любимый фреймворк для работы с естественным языком](http://streamhacker.com/2012/06/03/nltk-2-release-highlights/). Хотя я из него использую в основном нормалайзер, стеммер и средства для машинного обучения. {nltk} {python} {svm}
-* [Красивый и визуально и по коду чат, написанный на ноде и сокет.ио](http://gravityonmars.github.com/Balloons.IO/). С пушем сообщений по вебсокету и хранением в редисе. {node} {chat}
+* [Красивый и визуально, и по коду чат, написанный на ноде и сокет.ио](http://gravityonmars.github.com/Balloons.IO/). С пушем сообщений по вебсокету и хранением в редисе. {node} {chat}
 
