--- a/source/posts/2012-06-04.md
+++ b/source/posts/2012-06-04.md
@@ -2,22 +2,22 @@
 
 Мои "темы дня" не обязательно новости, если вы понимаете, о чём я. Вот и сегодня, извините за неровный почерк.
 
-В конце прошлой недели ребята из [Mozilla UX выложили свой отчет по использованию разных элементов интерфейса их браузера](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/). Сегодня я вам расскажу, что там было самое интересное. А это примерно всё.
+В конце прошлой недели ребята из [Mozilla UX выложили свой отчёт по использованию разных элементов интерфейса их браузера](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/). Сегодня я вам расскажу, что там было самое интересное. А это примерно всё.
 
 >>![center](http://chyo.ru/testpilot.png)<<
 
-Как, собственно, всё это происходило: в течении одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с легким перекосом в сторону гиков. Ну, не то чтобы с легким, скорее, с сильным, потому что тест пилот обычно включен у пользователей Mozilla Nightly, например, у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
+Как, собственно, всё это происходило: в течении одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с лёгким перекосом в сторону гиков. Ну, не то чтобы с лёгким, скорее, с сильным, потому что тест пилот обычно включён у пользователей Mozilla Nightly, например, у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
 
 Вот интересные области, куда нажимают люди в порядке возрастания частоты.
 
-* **14.6%** Кнопка "звездочка", выполняющая функцию "быстрой закладки". Никогда не понимал, как она работает. Изучу подробнее.
+* **14.6%** Кнопка "звёздочка", выполняющая функцию "быстрой закладки". Никогда не понимал, как она работает. Изучу подробнее.
 * **20.9%** Выбор поисковой системы в строке ввода поиска. Т.е. буквально каждый 5 меняет поисковую систему по умолчанию. Это очень много.
-* **22.1%** Кнопка "Домой". Кто и зачем ей еще пользуется, а? Или это просто возможность быстрого перехода на любимый сайт?
+* **22.1%** Кнопка "Домой". Кто и зачем ей ещё пользуется, а? Или это просто возможность быстрого перехода на любимый сайт?
 * **27.0%** Выбор подсказки в строке ввода поиска.
-* **30.0%** Панель закладок. Удивился. Я думал я один такой, постоянно использую Бумарк Бар.
+* **30.0%** Панель закладок. Удивился. Я думал я один такой, постоянно использую Букмарк Бар.
 * **40.1%** Кнопка "Reload". Вот это реально ужас. Люди реально используют кнопку Reload! ШОК! ВИДЕО!
 * **45.5%** Сама строка ввода поиска.
-* **47.7%** Кнопка "Вперед"
+* **47.7%** Кнопка "Вперёд"
 
 А вот теперь самое интересное, то, что использует более половины пользователей регулярно.
 
@@ -33,7 +33,7 @@
 * Люди умеют пользоваться саджестами, не только в поиске, но и в строке ввода URL. Поздравляю, люди, вы только что выросли в моих глазах!
 * Люди используют разные поисковые системы. И всем браузерам предстоит с этим что-то решать, потому что сейчас все браузеры пытаются объединить опыт поисковой строки и строки ввода URL.
 * Люди *очень* интенсивно используют закладки. Куда интенсивнее, чем я думал, а, значит, и тут нужна революция, ведь сейчас интерфейс закладок юзабелен только в панели закладок. Это, кстати, косвенно подтверждается и популярностью фичи "визуальные закладки" в яндекс.баре для FireFox.
-* Всего 0.7% используют кнопку "показать все табы". Скорее всего, ее надо убирать из интерфейса. К сожалению, эта же кнопка позволяет группировать табы, а это фича ради которой я и пользуюсь мозиллой.
+* Всего 0.7% используют кнопку "показать все табы". Скорее всего, её надо убирать из интерфейса. К сожалению, эта же кнопка позволяет группировать табы, а это фича ради которой я и пользуюсь мозиллой.
 
 В этом опросе [так же получены результаты по использованию меню](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/) и проч. Прочитайте, это очень познавательно и удивительно в некоторых аспектах. Открывает глаза на многие детали использования интернета в целом.
 
@@ -44,8 +44,8 @@
 * [Эппловский телевизор, и почему стоит ждать от него революции](http://www.businessinsider.com/apple-television-what-to-expect-2012-6). Бизнесинсайдер всегда такой бизнесинсайдер. {apple} {tv} {fap} {fap} {fap}
 * [Фотохостинг PicPlz закрывается 3 июля. Совсем.](http://thenextweb.com/insider/2012/06/02/photo-sharing-service-picplz-to-shut-down-on-3-july/) Все думают, что причина в инстаграме. {foto} {picplz} {instagram}
 * [10 инстаграммов, но для видео](http://thenextweb.com/apps/2012/06/03/10-instagram-for-video-apps-to-watch/). Я их все пробовал, нормальный только SocialCam. {video} {hipsters}
-* [Кошмар гугла: Apple-Фейсбук затусовались](http://news.cnet.com/8301-17852_3-57446229-71/googles-fear-an-apple-facebook-love-fest/). Действительно, Гугл, ударяясь в свой Г+, вряд ли учел, что два таких огромных игрока могут запартнериться. {gplus} {google} {facebook} {apple}
-* [И еще немного на ту же тему: куски Facebook будут очень торчать в iOS6](http://techcrunch.com/2012/06/01/facebook-ios-6-integration/). Я рад, потому что лучше facebook, чем вк и гплас :) {facebook} {ios6} {apple}
+* [Кошмар гугла: Apple-Фейсбук затусовались](http://news.cnet.com/8301-17852_3-57446229-71/googles-fear-an-apple-facebook-love-fest/). Действительно, Гугл, ударяясь в свой Г+, вряд ли учёл, что два таких огромных игрока могут запартнериться. {gplus} {google} {facebook} {apple}
+* [И ещё немного на ту же тему: куски Facebook будут очень торчать в iOS6](http://techcrunch.com/2012/06/01/facebook-ios-6-integration/). Я рад, потому что лучше facebook, чем вк и гплас :) {facebook} {ios6} {apple}
 * [А вот и контрмеры: судя по всему, Google запустит 3d-карты быстрее, чем Apple](http://www.forbes.com/sites/anthonykosner/2012/06/02/touche-google-plans-to-announce-its-own-3d-maps-before-apple/). Конечно, быстрее не значит лучше. Но поставить эпл в позицию догоняющих - приятно. [Еще один обзор этой темы от TNW](http://thenextweb.com/google/2012/06/01/google-to-head-apple-off-at-the-pass-by-holding-3d-maps-event-june-6th-just-before-wwdc/) {apple} {google} {maps}
 * [В Gmaps для андроида нашли неиспользованные иконки, видимо, для следующих релизов](http://www.androidpolice.com/2012/06/01/mysterious-new-files-in-the-google-maps-6-8-apk-history-timeline-latitude-g-integration-and-more/). И по ним можно додумать будущий функционал. Круто же? {gmaps} {google}
 * [Когда фейсбук ложится, весь интернет моргает](http://gigaom.com/2012/06/01/when-facebook-goes-down-the-internet-barely-blinks/) и это очевидно. Хотя, я думаю, хуже всего интернету от морганий youTube. {facebook}
@@ -62,10 +62,9 @@
 * [Книга "Taking your talent to the web" стала доступна онлайн](http://takingyourtalenttotheweb.com/). Это исторически ценная книга, вышедшая в 2001 году, одна из самых древних книг по *современному* вебдизайну. {html} {design}
 
 ## Для гиков
-* [Фейсбук зарелизил библиотеку Folly](https://www.facebook.com/notes/facebook-engineering/folly-the-facebook-open-source-library/10150864656793920). Поздравьте меня. Я раньше комплексовал, что у нас в поиске тоже куча своих собственных реализаций всего подряд, даже класс строки был. Теперь я не переживаю, это у всех так, даже у стомиллиардных компаний! [Вот еще краткое упоминание этой новости](http://www.phoronix.com/scan.php?page=news_item&px=MTExMjQ). {facebook} {bicycle} {folly} {cplusplus}
+* [Фейсбук зарелизил библиотеку Folly](https://www.facebook.com/notes/facebook-engineering/folly-the-facebook-open-source-library/10150864656793920). Поздравьте меня. Я раньше комплексовал, что у нас в поиске тоже куча своих собственных реализаций всего подряд, даже класс строки был. Теперь я не переживаю, это у всех так, даже у стомиллиардных компаний! [Вот ещё краткое упоминание этой новости](http://www.phoronix.com/scan.php?page=news_item&px=MTExMjQ). {facebook} {bicycle} {folly} {cplusplus}
 * Многие очень рекомендуют использовать в качестве начального шаблона для сайта [HTML5 Boilerplate](http://html5boilerplate.com/). [Вот отличная подборка туториалов и шаблонов на основе HTML5 Boilerplate](http://designmodo.com/html5-boilerplate-templates-tutorials/). {html} {boilerplate}
 * [Как выглядит API к Siri](http://blog.teaapp.com/post/24212825807/tea-earl-grey-hot-what-would-a-siri-api-look-like). Интересно было почитать, хотя на 80% это домыслы, конечно. {siri} {api}
 * [jquery transit - библиотека для красивых визуальных преобразований](http://ricostacruz.com/jquery.transit/). Работает на CSS3, подходит только для современных браузеров. {html} {jquery} {css}
 * [Как-то я упустил, вышел NLTK2, мой любимый фреймворк для работы с естественным языком](http://streamhacker.com/2012/06/03/nltk-2-release-highlights/). Хотя я из него использую в основном нормалайзер, стеммер и средства для машинного обучения. {nltk} {python} {svm}
 * [Красивый и визуально, и по коду чат, написанный на ноде и сокет.ио](http://gravityonmars.github.com/Balloons.IO/). С пушем сообщений по вебсокету и хранением в редисе. {node} {chat}
-
