--- a/source/posts/2012-06-04.md
+++ b/source/posts/2012-06-04.md
@@ -53,7 +53,7 @@
 * [Яху и Facebook, вероятно, сумеют договориться по поводу патентов](http://allthingsd.com/20120603/patent-peace-yahoo-and-facebook-in-advanced-negotiations-to-settle-fractious-infringement-lawsuits/). Правда, через суд :) {facebook} {yahoo} {lawyers}
 
 ## На грани
-* [Еврокомиссия намекает, что Google должен поменять поисковую выдачу или предстать перед Европейским судом](http://www.guardian.co.uk/technology/2012/jun/01/google-european-commission-search-results). Потому что нельзя быть на свете красивой такой и промотировать свои сервисы, незаслуженно ставя их выше чужих. Я, как не странно, на стороне гугла. Их сервис, их правила. {google} {antitrust}
+* [Еврокомиссия намекает, что Google должен поменять поисковую выдачу или предстать перед Европейским судом](http://www.guardian.co.uk/technology/2012/jun/01/google-european-commission-search-results). Потому что нельзя быть на свете красивой такой и промотировать свои сервисы, незаслуженно ставя их выше чужих. Я, как ни странно, на стороне гугла. Их сервис, их правила. {google} {antitrust}
 * [Пароли людей старше 55 вдвое круче, чем пароли подростков до 25](http://www.newscientist.com/article/dn21871-over55s-pick-passwords-twice-as-secure-as-teenagers.html). О чем это говорит? О том, что у подростков нет представлений о безопасности? {security} {password}
 * [Статья-фантазия, что бы iOS6 могла утащить у других операционных систем](http://www.imore.com/2012/05/31/higher-hanging-fruit-ios-6/). Лично я никаких революций не жду, меня пока все устраивает. {ios} {apple}
 * [Android 4 уже на 7% совместимых устройств](http://www.theverge.com/2012/6/2/3058522/android-4-0-now-on-7-1-percent-of-devices-still-woefully-behind). Даже андроида 2.2 пока больше. {mobile} {android}
