add from ivlad@

--- a/source/posts/2012-06-05.md
+++ b/source/posts/2012-06-05.md
@@ -26,6 +26,11 @@
 
 ## На грани
 * [Майкрософт опять очень вольно обращается с сертификатами](http://www.securityweek.com/microsoft-unauthorized-certificate-was-used-sign-flame-malware). Собственно "Flame", как оказалось, распространялся через Windows Update. [Вот чуть больше подробностей от F-Secure](http://www.f-secure.com/weblog/archives/00002377.html). И смысл обоих статей: "Получение сертификата, которым Microsoft подписывает код, было Святым Граалем писателей малвари. Это произошло". {security} {flame}
+
+Коментарий по этому поводу от <a href="twitter.com/ivladdalvi">@ivladdalvi</a>
+> Смысл такой: Microsoft выпускала сертификаты для нужд лицензирования Terminal Services. По какой-то ошибке, суть которой я не дал себе труда выяснить, к сожалению, такие сертификаты считались валидными для подписывания кода. Я подозреваю, что там соответствующие constrains не были включены в сертификат, то есть ребята в MS настроили CA по умолчанию, не отдавая себе отчет в последствиях - но это моя спекуляция.
+> Таким образом, любой ключ, выданный для лицензии Terminal Services, мог использоваться для подписания кода, чем ребята из Flame и воспользовались. Они подписали свою малварь этим, поэтому она считалась софтиной Microsoft (цепочка же шла к сертификатам Microsoft) и, скорее всего, была в вайтлистах антвирусных компаний. Кроме того, вчера обнаружлось, что у Flame есть модуль Gadget, который перехватывает запросы к Windows Update и может в ответ подсунуть еще кусок малвари, подписанный тем самым ключом. Поскольку сертификаты WIndows Update проверяются перед установкой, такая малварь считается тоже доверенной и устанавливается без проблем.
+
 * [Font Awesome - шрифтовые иконки в стиле твиттер-бутстрап](http://fortawesome.github.com/Font-Awesome/). Но вообще их можно использовать и не с бутстрапом, иконки удачные и лицензия позволяет любое использование. {font} {bootstrap} {html}
 * [Удивительно удобный враппер вокруг gmaps API](http://hpneo.github.com/gmaps/examples.html). Лаконично и просто. Минусов пока не увидел. {gmaps} {javascript} {api}
 * [Joconut - еще одна реализация идеи PJAX](https://github.com/vdemedes/joconut), на этот раз максимально упрощающая внедрение в текущую верстку. {javascript} {html}
